--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>Chasing Waterfalls - Real-world performance optimization of 3rd-party JavaScript</title>
+		<title>Front-End Optimization</title>
 
 		<meta name="description" content="TODO">
 		<meta name="author" content="Lon Ingram">
